--- a/lib/IO/Async.pod
+++ b/lib/IO/Async.pod
@@ -18,7 +18,7 @@ IO
  my $buffer = IO::Async::Buffer->new(
     handle => $line_socket,
 
-    incoming_data => sub {
+    on_incoming_data => sub {
        return 0 unless( $$_[0] =~ s/^(.*\n)// );
 
        print "Received a line $1";
@@ -51,7 +51,7 @@ A L<IO::Async::Notifier> object represents a single IO stream that is being
 managed. While in most cases it will represent a single filehandle, such as a
 socket (for example, an C<IO::Socket::INET> connection), it is possible to
 have separate reading and writing handles (most likely for a program's
-C<STDIN> and C<STDOUT> streams. Subclass methods or callback functions are
+C<STDIN> and C<STDOUT> streams). Subclass methods or callback functions are
 then used by the containing C<IO::Async::Set> object, to inform the notifier
 when the handles are read- or write-ready.
 
