--- a/lib/IO/Async.pod
+++ b/lib/IO/Async.pod
@@ -94,6 +94,21 @@ no asynchronous version is supplied. For these cases, an instance of
 L<IO::Async::DetachedCode> can be used around a code block, to execute it in
 a detached child process.
 
+=head2 Timers
+
+Each of the L<IO::Async::Set> subclasses supports a pair of methods for
+installing and cancelling timers. These are callbacks invoked at some fixed
+future time. Once installed, a timer will be called at or after its expiry
+time, which may be absolute, or relative to the time it was installed. An
+installed timer which has not yet expired may be cancelled.
+
+=head2 Merge Points
+
+The L<IO::Async::MergePoint> object class allows for a program to wait on the
+completion of multiple seperate subtasks. It allows for each subtask to return
+some data, which will be collected and given to the callback provided to the
+merge point, which is called when every subtask has completed.
+
 =head1 MOTIVATION
 
 The purpose of this distribution is two-fold.
