Import of PEVANS/IO-Async-0.10 from CPAN.
gitpan-cpan-distribution: IO-Async
gitpan-cpan-version:      0.10
gitpan-cpan-path:         PEVANS/IO-Async-0.10.tar.gz
gitpan-cpan-author:       PEVANS
gitpan-cpan-maturity:     released

--- a/lib/IO/Async.pod
+++ b/lib/IO/Async.pod
@@ -18,7 +18,7 @@ IO
  my $buffer = IO::Async::Buffer->new(
     handle => $socket,
 
-    on_incoming_data => sub {
+    on_read => sub {
        return 0 unless( $$_[0] =~ s/^(.*\n)// );
 
        print "Received a line $1";
@@ -27,7 +27,7 @@ IO
     }
  );
 
- $buffer->send( "An initial line here\n" );
+ $buffer->write( "An initial line here\n" );
 
  my $set = IO::Async::Set::IO_Poll->new();
  
