Import of PEVANS/IO-Async-0.18 from CPAN.
gitpan-cpan-distribution: IO-Async
gitpan-cpan-version:      0.18
gitpan-cpan-path:         PEVANS/IO-Async-0.18.tar.gz
gitpan-cpan-author:       PEVANS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,15 @@
 Revision history for IO-Async
 
+0.18:   CHANGES:
+         * Allow Sequencer to be a base class as well as using constructor
+           callbacks
+         * Use signal names from Config.pm rather than relying on POSIX.pm.
+           Covers more signals that way
+
+        BUGFIXES:
+         * Gracefully handle accept() returning EAGAIN
+         * Fixed handling of IO::Socket->getsockopt( SOL_SOCKET, SO_ERROR )
+
 0.17:   CHANGES:
          * Added Stream->close_when_empty and ->close_now. Added docs
          * Added OS abstractions of socketpair() and pipe()
