Import of PEVANS/IO-Async-0.19 from CPAN.
gitpan-cpan-distribution: IO-Async
gitpan-cpan-version:      0.19
gitpan-cpan-path:         PEVANS/IO-Async-0.19.tar.gz
gitpan-cpan-author:       PEVANS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,20 @@
 Revision history for IO-Async
 
-0.18:   CHANGES:
+0.19    CHANGES:
+         * Allow control of Sequencer's pipelining
+         * Documentation fixes
+         * Allow Loop->run_child to take a 'setup' array
+         * Added 'setuid', 'setgid' and 'setgroups' child setup operations
+         * Support 'on_notifier' in Loop->listen
+
+        BUGFIXES:
+         * carp before return in Stream->write so it actually prints
+         * Ensure Streams still work after being closed and reopened by
+           ->set_handle
+         * If IO::Socket->new() fails, try again with generic ->socket
+           (makes IPv6 work on platforms without IO::Socket::INET6)
+
+0.18    CHANGES:
          * Allow Sequencer to be a base class as well as using constructor
            callbacks
          * Use signal names from Config.pm rather than relying on POSIX.pm.
@@ -10,7 +24,7 @@ Revision history for IO-Async
          * Gracefully handle accept() returning EAGAIN
          * Fixed handling of IO::Socket->getsockopt( SOL_SOCKET, SO_ERROR )
 
-0.17:   CHANGES:
+0.17    CHANGES:
          * Added Stream->close_when_empty and ->close_now. Added docs
          * Added OS abstractions of socketpair() and pipe()
          * Many documentation changes and updates
