--- a/README
+++ b/README
@@ -5,14 +5,12 @@ SYNOPSIS
      use IO::Async::Stream;
      use IO::Async::Loop;
 
-     use Socket qw( SOCK_STREAM );
-
      my $loop = IO::Async::Loop->new();
 
      $loop->connect(
         host     => "some.other.host",
         service  => 12345,
-        socktype => SOCK_STREAM,
+        socktype => 'stream',
 
         on_connected => sub {
            my ( $socket ) = @_;
